--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,71 @@
 *{
     padding: 0;
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
+img{
+    width: 200px;
+    height: 225px;
+}
+
+.menysystem{
+    display: flex;
+    list-style-type: none;
+    height: 100%;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.menu_link{
+    text-decoration: none;
+}
+
+.menu_link:hover{
+    color: salmon;
+}
+
+.menu_link:visited{
+    color: rgb(0, 0, 0);
+}
+
+.grid{
+
+    display: grid;
+    height: 720px;
+    width: auto;
+    grid-template-areas: 
+    "na na"
+    "he he"
+    "s1 s2"
+    "fo fo" 
+    ;
+
+
+}
+
+nav{
+    grid-area: na;
+    background-color: rgb(74, 235, 95)
+}
+
+header{
+    grid-area: he;
+    background-color: salmon;
+}
+
+#s1{
+    grid-area: s1;
+    background-color: forestgreen;
+}
+
+#s2{
+    grid-area: s2;
+    background-color: gold;
+}
+
+footer{
+    grid-area: fo;
+    background-color: cyan;
+}
