--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap');
+
 *{
     padding: 0;
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
-img{
-    width: 200px;
-    height: 225px;
-}
+
+
 
 .menysystem{
     display: flex;
     list-style-type: none;
     height: 100%;
-    flex-direction: row;
+    width: 45%;
+    flex-direction: row-reverse;
     justify-content: space-around;
     align-items: center;
+}
+
+.navmeny{
+    position: fixed;
+    display: flex;
+    width: 100%;
+    height: 15%;
+    box-shadow: 0px 0px 20px 0px rgb(226, 117, 105) inset;
+    background: rgba(138, 82, 82, 0.5);
 }
 
 .menu_link{
@@ -31,23 +40,16 @@ img{
 }
 
 .grid{
-
     display: grid;
-    height: 720px;
-    width: auto;
+    height: 100vh;
+    width: 100vw;
     grid-template-areas: 
-    "na na"
     "he he"
     "s1 s2"
     "fo fo" 
     ;
 
 
-}
-
-nav{
-    grid-area: na;
-    background-color: rgb(74, 235, 95)
 }
 
 header{
@@ -58,14 +60,29 @@ header{
 #s1{
     grid-area: s1;
     background-color: forestgreen;
+    
 }
 
 #s2{
     grid-area: s2;
     background-color: gold;
+    
 }
 
 footer{
     grid-area: fo;
     background-color: cyan;
+}
+
+#mehmet{
+    width: 200px;
+    height: 225px;
+}
+
+.klassiker-list{
+    margin-bottom: 2px;
+}
+
+.halal-kosher-list{
+    
 }
