--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
     list-style-type: none;
     height: 100%;
     width: 45%;
-    flex-direction: row-reverse;
+    flex-direction: row;
     justify-content: space-around;
     align-items: center;
 }
@@ -22,43 +22,38 @@
     position: fixed;
     display: flex;
     width: 100%;
-    height: 15%;
-    box-shadow: 0px 0px 20px 0px rgb(226, 117, 105) inset;
-    background: rgba(138, 82, 82, 0.5);
+    height: 100px;
+    box-shadow: 0px 0px 20px 0px rgb(255, 255, 255) inset;
+    background: rgba(138, 82, 82, 0.8);
 }
 
-.menu_link{
-    text-decoration: none;
+.menu_link a:hover{
+    color: rgb(28, 184, 75);
 }
 
-.menu_link:hover{
-    color: salmon;
-}
-
-.menu_link:visited{
+.menu_link a:visited{
     color: rgb(0, 0, 0);
 }
 
 .grid{
     display: grid;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     grid-template-areas: 
     "he he"
-    "s1 s2"
+    "se s2"
     "fo fo" 
     ;
-
-
 }
 
 header{
     grid-area: he;
     background-color: salmon;
+    margin-top: 100px;
 }
 
-#s1{
-    grid-area: s1;
+#se{
+    grid-area: se;
     background-color: forestgreen;
     
 }
@@ -83,6 +78,20 @@ footer{
     margin-bottom: 2px;
 }
 
-.halal-kosher-list{
-    
+ul li{
+    list-style-type: none;
+}
+
+ul li a{
+    list-style-type: none;
+    text-decoration: none;
+}
+
+img{
+    height: 250px;
+    width: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
